--- a/_posts/2014-06-16-huile.md
+++ b/_posts/2014-06-16-huile.md
@@ -3,10 +3,10 @@ layout: post
 title: Huilage
 ---
 
-![Bim](/assets/huilage1.jpg)
-![Bim](/assets/huilage2.jpg)
+![Bim]({{ site.url }}/assets/huilage1.jpg)
+![Bim]({{ site.url }}/assets/huilage2.jpg)
 
 
-![Bim](/assets/huilage3.jpg)
-![Bim](/assets/huilage4.jpg)
-![Bim](/assets/huilage5.jpg)
+![Bim]({{ site.url }}/assets/huilage3.jpg)
+![Bim]({{ site.url }}/assets/huilage4.jpg)
+![Bim]({{ site.url }}/assets/huilage5.jpg)
